boreal/tests/assets/invalid_files/compilation/unused_variable.yar
// [error: variable $a is unused]
rule a {
    strings:
        $a = "a"
    condition:
        true
}
